# multimodal_patch_datalogger

./: CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.esp32-s3-devkitc-1  sdkconfig.esp32-s3-devkitc-1.old
main/: CMakeLists.txt  ads1298r.h  ble_stream.c  ble_stream.h  config.h  data_records.h  ecg_inference.h  i2c_sensors.c  i2c_sensors.h  idf_component.yml  main.c  pipeline.c  pipeline.h  sd_logger.c  sd_logger.h  serial_stream.c  serial_stream.h
src/: CMakeLists.txt  ads1298r.c  config.h  data_types.h  ecg_inference.cpp  ecg_inference.h  i2c_sensors.c  i2c_sensors.h  idf_component.yml  imu.c  imu.h  main.c  max30205.c  max30205.h  pipeline.c  sd_logger.c  sd_logger.h  serial_stream.c  serial_stream.h  temperature.c  temperature.h
src/models/: model.espdl  model.info  model.json
tools/: parse_recording.py
