idf_component_register(
    SRCS
        "main.c"
        "ads1298r.c"
        "i2c_sensors.c"
        "pipeline.c"
        "sd_logger.c"
        "serial_stream.c"
        "ecg_inference.cpp"
    INCLUDE_DIRS
        "."
    REQUIRES
        driver
        esp-dl
        fatfs
        sdmmc
        esp_timer
        esp_driver_spi
        esp_driver_gpio
        esp_driver_i2c
        esp_driver_uart
        esp_driver_usb_serial_jtag
    EMBED_FILES
        "models/model.espdl"
)